--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "cookies-next": "^4.0.0",
     "framer-motion": "^10.16.4",
