--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
+    "supports-color": "^8.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
