get product data on server side

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MONGODB_URI= mongodb+srv://yahiaelsayed_19:1911@cluster0.8duv7w9.mongodb.net/?re
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_URL_INTERNAL=http://localhost:3000
 NEXTAUTH_SECRET=8OWmSvsHWCVYFNek5p2/z6AVPotyh2jEm5yNsnhO7HI=
+BASE_URL=http://localhost:3000
