--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "react-query": "^3.39.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@vercel/server-components": "^0.3.0"
   }
 }
